--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis similique odit ea enim maiores. Officia, non mollitia ducimus illo modi exercitationem vitae debitis harum iure totam praesentium. Sed, porro deleniti.</p>
+    </div>
 </body>
 </html>
