added the second and third blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis similique odit ea enim maiores. Officia, non mollitia ducimus illo modi exercitationem vitae debitis harum iure totam praesentium. Sed, porro deleniti.</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis similique odit ea enim maiores. Officia, non mollitia ducimus illo modi exercitationem vitae debitis harum iure totam praesentium. Sed, porro deleniti.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis similique odit ea enim maiores. Officia, non mollitia ducimus illo modi exercitationem vitae debitis harum iure totam praesentium. Sed, porro deleniti.</p>
     </div>
 </body>
